requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LSS_python"
version = "0.5.0"
description = "A package to deal with some problems about Large Scale Structure. Full support by python(numba). cuda(cupy) is optinonal"
authors = [
    {name = "LSS_python", email = "xiaoliangms@outlook.com"},
]

# 这里是基础依赖
dependencies = [
    "numpy",
    "numba",
    "joblib",
    "scipy",
    "emcee",
    "h5py",
    "multiprocess",
    "Corrfunc",
]

# 这里是可选依赖
[project.optional-dependencies]
cuda = ["cupy"]
